force-app/main/default/objects/Application__c/fields/of_Rehab_Projects_are_Ground_Up_Constr__c.field-meta.xml
<CustomField>
    <fullName>of_Rehab_Projects_are_Ground_Up_Constr__c</fullName>
    <label># of Rehab Projects are Ground Up Constr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>