force-app/main/default/objects/Application__c/fields/of_Rehab_Projects_Last_36_Months__c.field-meta.xml
<CustomField>
    <fullName>of_Rehab_Projects_Last_36_Months__c</fullName>
    <label># of Rehab Projects Last 36 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>