force-app/main/default/objects/Application__c/fields/On_Financial_Sanction_List__c.field-meta.xml
<CustomField>
    <fullName>On_Financial_Sanction_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Financial Sanction List</label>
    <type>Checkbox</type>
</CustomField>