force-app/main/default/objects/Application__c/fields/On_Financial_Sanction_List_Comments__c.field-meta.xml
<CustomField>
    <fullName>On_Financial_Sanction_List_Comments__c</fullName>
    <label>On Financial Sanction List Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>