force-app/main/default/objects/Application__c/fields/On_Financial_Sanctions_File__c.field-meta.xml
<CustomField>
    <fullName>On_Financial_Sanctions_File__c</fullName>
    <formula>IF(ISBLANK(Financial_Sanctions_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Financial_Sanctions_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Financial Sanctions File</label>
    <type>Text</type>
</CustomField>