force-app/main/default/objects/Application__c/fields/Opt_for_CoreVest_Insurance_Agent__c.field-meta.xml
<CustomField>
    <fullName>Opt_for_CoreVest_Insurance_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt for CoreVest Insurance Agent</label>
    <type>Checkbox</type>
</CustomField>