force-app/main/default/objects/Application__c/fields/Outstanding_Judgement_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Judgement_File_Id__c</fullName>
    <label>Outstanding Judgement File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>