force-app/main/default/objects/Application__c/fields/Outstanding_Judgements__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Judgements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outstanding Judgements</label>
    <type>Checkbox</type>
</CustomField>