force-app/main/default/objects/Application__c/fields/Outstanding_Judgements_Comments__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Judgements_Comments__c</fullName>
    <label>Outstanding Judgements Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>