force-app/main/default/objects/Application__c/fields/Outstanding_Judgements_File__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Judgements_File__c</fullName>
    <formula>IF(ISBLANK(Outstanding_Judgement_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Outstanding_Judgement_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Judgements File</label>
    <type>Text</type>
</CustomField>