force-app/main/default/objects/Application__c/fields/Payoff_Amount_As_Of__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Amount_As_Of__c</fullName>
    <label>Payoff Amount As Of</label>
    <type>Date</type>
</CustomField>