force-app/main/default/objects/Application__c/fields/Pending_Litigations__c.field-meta.xml
<CustomField>
    <fullName>Pending_Litigations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Litigations</label>
    <type>Checkbox</type>
</CustomField>