force-app/main/default/objects/Application__c/fields/Pending_Litigations_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pending_Litigations_Comments__c</fullName>
    <label>Pending Litigations Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>