force-app/main/default/objects/Application__c/fields/Pending_Litigations_File__c.field-meta.xml
<CustomField>
    <fullName>Pending_Litigations_File__c</fullName>
    <formula>IF(ISBLANK(Pending_Litigations_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Pending_Litigations_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Litigations File</label>
    <type>Text</type>
</CustomField>