force-app/main/default/objects/Application__c/fields/Pending_Litigations_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Pending_Litigations_File_Id__c</fullName>
    <label>Pending Litigations File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>