force-app/main/default/objects/Application__c/fields/Permanent_Resident_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Resident_File_Id__c</fullName>
    <label>Permanent Resident File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>