force-app/main/default/objects/Application__c/fields/Plan_To_Fix_and_Flip__c.field-meta.xml
<CustomField>
    <fullName>Plan_To_Fix_and_Flip__c</fullName>
    <label>Plan To Fix and Flip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>