force-app/main/default/objects/Application__c/fields/Plan_To_Purchase_Refinacing_Properties__c.field-meta.xml
<CustomField>
    <fullName>Plan_To_Purchase_Refinacing_Properties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan To Purchase Refinacing Properties</label>
    <type>Checkbox</type>
</CustomField>