force-app/main/default/objects/Application__c/fields/Portfolio_Properties_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Properties_File_Id__c</fullName>
    <label>Portfolio Properties File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>