force-app/main/default/objects/Application__c/fields/Portfolio_Properties_Litigations__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Properties_Litigations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portfolio Properties Litigations</label>
    <type>Checkbox</type>
</CustomField>