force-app/main/default/objects/Application__c/fields/Portfolio_Properties_Litigations_Comment__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Properties_Litigations_Comment__c</fullName>
    <label>Portfolio Properties Litigations Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>