force-app/main/default/objects/Application__c/fields/Portfolio_Properties_Litigations_File__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Properties_Litigations_File__c</fullName>
    <formula>IF(ISBLANK(Portfolio_Properties_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Portfolio_Properties_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portfolio Properties Litigations File</label>
    <type>Text</type>
</CustomField>