force-app/main/default/objects/Application__c/fields/Principal_Info_City__c.field-meta.xml
<CustomField>
    <fullName>Principal_Info_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>