force-app/main/default/objects/Application__c/fields/Principal_Info_State__c.field-meta.xml
<CustomField>
    <fullName>Principal_Info_State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>