force-app/main/default/objects/Application__c/fields/PrincipalInfos_JSON__c.field-meta.xml
<CustomField>
    <fullName>PrincipalInfos_JSON__c</fullName>
    <label>PrincipalInfos_JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>