force-app/main/default/objects/Application__c/fields/Principle_Info_Address__c.field-meta.xml
<CustomField>
    <fullName>Principle_Info_Address__c</fullName>
    <label>Principle Info Address</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>