force-app/main/default/objects/Application__c/fields/Principle_Info_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Principle_Info_Email_Address__c</fullName>
    <label>Principle Info Email Address</label>
    <type>Email</type>
</CustomField>