force-app/main/default/objects/Application__c/fields/Principle_Info_Name__c.field-meta.xml
<CustomField>
    <fullName>Principle_Info_Name__c</fullName>
    <label>Principle Info Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>