force-app/main/default/objects/Application__c/fields/Principle_Info_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Principle_Info_Work_Phone__c</fullName>
    <label>Principle Info Work Phone</label>
    <type>Phone</type>
</CustomField>