force-app/main/default/objects/Application__c/fields/Properties_To_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Properties_To_Purchase__c</fullName>
    <label>Properties To Purchase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>