force-app/main/default/objects/Application__c/fields/Property_Management_Companies__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Companies__c</fullName>
    <description>Third Party Property Management Companies Used by Applicant</description>
    <inlineHelpText>Third Party Property Management Companies Used by Applicant</inlineHelpText>
    <label>Property Management Companies</label>
    <type>TextArea</type>
</CustomField>