force-app/main/default/objects/Application__c/fields/Property_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Property_Strategy__c</fullName>
    <label>Property Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>