force-app/main/default/objects/Application__c/fields/Property_Violations_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Property_Violations_File_Id__c</fullName>
    <label>Property Violations File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>