force-app/main/default/objects/Application__c/fields/Property_Violations_Investigations_5yr__c.field-meta.xml
<CustomField>
    <fullName>Property_Violations_Investigations_5yr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property Violations Investigations 5yr</label>
    <type>Checkbox</type>
</CustomField>