force-app/main/default/objects/Application__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>