force-app/main/default/objects/Application__c/fields/Race_Based_On_Observation__c.field-meta.xml
<CustomField>
    <fullName>Race_Based_On_Observation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Race Based On Observation</label>
    <type>Checkbox</type>
</CustomField>