force-app/main/default/objects/Application__c/fields/Range_of_Properties__c.field-meta.xml
<CustomField>
    <fullName>Range_of_Properties__c</fullName>
    <label>Range of Properties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>