force-app/main/default/objects/Application__c/fields/Reason_For_Losses__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Losses__c</fullName>
    <label>Reason For Losses</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>