force-app/main/default/objects/Application__c/fields/Reason_for_Lost_Money__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Lost_Money__c</fullName>
    <description>Reason the Applicant has lost money on a Rental Property or Fix and Flip</description>
    <inlineHelpText>Reason the Applicant has lost money on a Rental Property or Fix and Flip</inlineHelpText>
    <label>Reason for Lost Money</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>