force-app/main/default/objects/Application__c/fields/Renovation_Work_Performer__c.field-meta.xml
<CustomField>
    <fullName>Renovation_Work_Performer__c</fullName>
    <label>Renovation Work Performer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>