force-app/main/default/objects/Application__c/fields/Rental_Property_Desired_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rental_Property_Desired_Amount__c</fullName>
    <label>Rental Property Desired Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>