force-app/main/default/objects/Application__c/fields/Rental_Property_Lender_Payoff_Number__c.field-meta.xml
<CustomField>
    <fullName>Rental_Property_Lender_Payoff_Number__c</fullName>
    <label>Rental Property Lender Payoff Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>