force-app/main/default/objects/Application__c/fields/Rental_Property_Loan_Purposes__c.field-meta.xml
<CustomField>
    <fullName>Rental_Property_Loan_Purposes__c</fullName>
    <label>Rental Property Loan Purposes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>