force-app/main/default/objects/Application__c/fields/Represented_by_an_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Represented_by_an_Attorney__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Represented by an Attorney</label>
    <type>Checkbox</type>
</CustomField>