force-app/main/default/objects/Application__c/fields/Review_Title__c.field-meta.xml
<CustomField>
    <fullName>Review_Title__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Title</label>
    <type>Checkbox</type>
</CustomField>