force-app/main/default/objects/Application__c/fields/Sex_Based_On_Observation__c.field-meta.xml
<CustomField>
    <fullName>Sex_Based_On_Observation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sex Based On Observation</label>
    <type>Checkbox</type>
</CustomField>