force-app/main/default/objects/Application__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Signature</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>