force-app/main/default/objects/Application__c/fields/Software_Used__c.field-meta.xml
<CustomField>
    <fullName>Software_Used__c</fullName>
    <description>Software used to for Accounting and/or Property Management</description>
    <inlineHelpText>Software used to for Accounting and/or Property Management</inlineHelpText>
    <label>Software Used</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>