force-app/main/default/objects/Application__c/fields/Source_of_the_Rental_Properties__c.field-meta.xml
<CustomField>
    <fullName>Source_of_the_Rental_Properties__c</fullName>
    <label>Source of the Rental Properties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>