force-app/main/default/objects/Application__c/fields/Sources_of_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Sources_of_Acquisition__c</fullName>
    <label>Sources of Acquisition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>