force-app/main/default/objects/Application__c/fields/States_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>States_of_Operation__c</fullName>
    <label>States of Operation</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>