force-app/main/default/objects/Application__c/fields/Target_Cities__c.field-meta.xml
<CustomField>
    <fullName>Target_Cities__c</fullName>
    <label>Target Cities</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>