force-app/main/default/objects/Application__c/fields/Third_Party_Title_Address__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Title_Address__c</fullName>
    <label>Third Party Title Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>