force-app/main/default/objects/Application__c/fields/Third_Party_Title_Email__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Title_Email__c</fullName>
    <label>Third Party Title Email</label>
    <type>Email</type>
</CustomField>