force-app/main/default/objects/Application__c/fields/Third_Party_Title_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Title_Work_Phone__c</fullName>
    <label>Third Party Title Work Phone</label>
    <type>Phone</type>
</CustomField>