force-app/main/default/objects/Application__c/fields/Title_Company__c.field-meta.xml
<CustomField>
    <fullName>Title_Company__c</fullName>
    <label>Title Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>