force-app/main/default/objects/Application__c/fields/Type_Of_Properties__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Properties__c</fullName>
    <label>Type Of Properties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>