force-app/main/default/objects/Application__c/fields/Type_of_Rental_Properties_Owned__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Rental_Properties_Owned__c</fullName>
    <label>Type of Rental Properties Owned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>