force-app/main/default/objects/Application__c/fields/Underwrited_Acquisitions__c.field-meta.xml
<CustomField>
    <fullName>Underwrited_Acquisitions__c</fullName>
    <label>Underwrited Acquisitions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>