force-app/main/default/objects/Application__c/fields/US_Citizen_File_Id__c.field-meta.xml
<CustomField>
    <fullName>US_Citizen_File_Id__c</fullName>
    <label>US Citizen File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>