force-app/main/default/objects/Application__c/fields/Violations_Investigations_Comments__c.field-meta.xml
<CustomField>
    <fullName>Violations_Investigations_Comments__c</fullName>
    <label>Violations/Investigations Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>