force-app/main/default/objects/Application__c/fields/Violations_Investigations_File__c.field-meta.xml
<CustomField>
    <fullName>Violations_Investigations_File__c</fullName>
    <formula>IF(ISBLANK(Property_Violations_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Property_Violations_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Violations/Investigations File</label>
    <type>Text</type>
</CustomField>