force-app/main/default/objects/Application__c/fields/Will_Use_Third_Party_Title__c.field-meta.xml
<CustomField>
    <fullName>Will_Use_Third_Party_Title__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will Use Third Party Title</label>
    <type>Checkbox</type>
</CustomField>