force-app/main/default/objects/Application__c/fields/Years_Experience_Investing_Rental_Props__c.field-meta.xml
<CustomField>
    <fullName>Years_Experience_Investing_Rental_Props__c</fullName>
    <label>Years Experience Investing Rental Props</label>
    <length>255</length>
    <type>Text</type>
</CustomField>