force-app/main/default/objects/Application__c/recordTypes/Term.recordType-meta.xml
<RecordType>
    <fullName>Term</fullName>
    <active>true</active>
    <label>Term</label>
</RecordType>