force-app/main/default/objects/Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Alchemy_User_Id__c</columns>
    <columns>Lead__c</columns>
    <columns>Contact__c</columns>
    <columns>Name__c</columns>
    <columns>Loan_Id__c</columns>
    <columns>Loan_Type__c</columns>
    <columns>Deal__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>