force-app/main/default/objects/Application__c/listViews/Created_Recently.listView-meta.xml
<ListView>
    <fullName>Created_Recently</fullName>
    <columns>NAME</columns>
    <columns>Alchemy_User_Id__c</columns>
    <columns>Lead__c</columns>
    <columns>Contact__c</columns>
    <columns>Name__c</columns>
    <columns>Loan_Id__c</columns>
    <columns>Loan_Type__c</columns>
    <columns>Deal__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:3</value>
    </filters>
    <label>Created Recently</label>
</ListView>